ConfigurableDoubleParser: Add support for sign as a suffix in the significand and the exponent.