@@ -49,15 +49,16 @@ public final class ConfigurableDoubleParserTestDataFactory {
         list.addAll(createChineseNumberFormatSymbolsTestData());
         list.addAll(createEnglishIgnoreCaseNumberFormatSymbolsTestData());
         list.addAll(createArabianNumberFormatSymbolsTestData());
+        list.addAll(createCustomArabianNumberFormatSymbolsTestData());
         list.addAll(createEstonianNumberFormatSymbolsTestData());
         return list;
     }
 
     public static List<NumberTestData> createEstonianNumberFormatSymbolsTestData() {
         List<NumberTestData> list = new ArrayList<>();
-        Locale estonianLocale = new Locale("et", "EE");
+        Locale locale = new Locale("et", "EE");
         DecimalFormatSymbols dfs = DecimalFormatSymbols.getInstance(
-                estonianLocale
+                locale
         );
         assertEquals(dfs.getMinusSign(), '\u2212', "Expected estonian minus sign U+2212");
         NumberFormatSymbols symbols = new NumberFormatSymbols(
@@ -70,26 +71,26 @@ public final class ConfigurableDoubleParserTestDataFactory {
                 Collections.singleton(dfs.getNaN()),
                 "" + dfs.getZeroDigit()
         );
-        list.addAll(List.of(
-                new NumberTestData("Estonian locale with Estonian minus", dfs.getLocale(), symbols, "\u221213,35", -13.35),
-                new NumberTestData("Estonian locale with ordinary minus", dfs.getLocale(), symbols, "-13,35", -13.35),
-                new NumberTestData("Estonian locale with full-width plus", dfs.getLocale(), symbols, "\uff0b13,35", 13.35),
-                new NumberTestData("Estonian locale with ordinary plus", dfs.getLocale(), symbols, "+13,35", 13.35),
-                new NumberTestData("Estonian locale with Estonian minus exponent", dfs.getLocale(), symbols, "13,35×10^\u22124", 13.35e-4),
-                new NumberTestData("Estonian locale with ordinary minus exponent", dfs.getLocale(), symbols, "13,35×10^-4", 13.35e-4),
-                new NumberTestData("Estonian locale with full-width plus exponent", dfs.getLocale(), symbols, "13,35×10^\uff0b4", 13.35e4),
-                new NumberTestData("Estonian locale with ordinary plus exponent", dfs.getLocale(), symbols, "13,35×10^+4", 13.35e4),
-                new NumberTestData("Estonian locale, Outside Clinger fast path, mantissa overflows in semi-fast path, 7.2057594037927933e+16",
-                        dfs.getLocale(), symbols, "7,2057594037927933×10^16", 7.2057594037927933e+16d)
+        list.addAll(Arrays.asList(
+                new NumberTestData(locale + " with Estonian minus", locale, symbols, "\u221213,35", -13.35),
+                new NumberTestData(locale + " with ordinary minus", locale, symbols, "-13,35", -13.35),
+                new NumberTestData(locale + " with full-width plus", locale, symbols, "\uff0b13,35", 13.35),
+                new NumberTestData(locale + " with ordinary plus", locale, symbols, "+13,35", 13.35),
+                new NumberTestData(locale + " with Estonian minus exponent", locale, symbols, "13,35×10^\u22124", 13.35e-4),
+                new NumberTestData(locale + " with ordinary minus exponent", locale, symbols, "13,35×10^-4", 13.35e-4),
+                new NumberTestData(locale + " with full-width plus exponent", locale, symbols, "13,35×10^\uff0b4", 13.35e4),
+                new NumberTestData(locale + " with ordinary plus exponent", locale, symbols, "13,35×10^+4", 13.35e4),
+                new NumberTestData(locale + ", Outside Clinger fast path, mantissa overflows in semi-fast path, 7.2057594037927933e+16",
+                        locale, symbols, "7,2057594037927933×10^16", 7.2057594037927933e+16d)
         ));
         return list;
     }
 
     public static List<NumberTestData> createChineseNumberFormatSymbolsTestData() {
         List<NumberTestData> list = new ArrayList<>();
-        Locale chineseLocale = new Locale("zh", "CN");
+        Locale locale = new Locale("zh", "CN");
         DecimalFormatSymbols dfs = DecimalFormatSymbols.getInstance(
-                chineseLocale
+                locale
         );
         NumberFormatSymbols symbols = new NumberFormatSymbols(
                 "" + dfs.getDecimalSeparator(),
@@ -101,17 +102,17 @@ public final class ConfigurableDoubleParserTestDataFactory {
                 Collections.singleton(dfs.getNaN()),
                 "〇一二三四五六七八九"
         );
-        list.addAll(List.of(
-                new NumberTestData("Chinese locale 一,二三四,五六七.〇八九", dfs.getLocale(), symbols, "一,二三四,五六七.〇八九", 1234567.089),
-                new NumberTestData("Chinese locale 〇.五六四", dfs.getLocale(), symbols, "〇.五六四", 0.564)
+        list.addAll(Arrays.asList(
+                new NumberTestData(locale + " locale 一,二三四,五六七.〇八九", locale, symbols, "一,二三四,五六七.〇八九", 1234567.089),
+                new NumberTestData(locale + " locale 〇.五六四", locale, symbols, "〇.五六四", 0.564)
         ));
         return list;
     }
 
     public static List<NumberTestData> createEnglishIgnoreCaseNumberFormatSymbolsTestData() {
         List<NumberTestData> list = new ArrayList<>();
-        Locale englishLocale = Locale.ENGLISH;
-        DecimalFormatSymbols dfs = DecimalFormatSymbols.getInstance(englishLocale);
+        Locale locale = Locale.ENGLISH;
+        DecimalFormatSymbols dfs = DecimalFormatSymbols.getInstance(locale);
         dfs.setInfinity("Infinity");
         dfs.setExponentSeparator("Exp");
         dfs.setNaN("NaN");
@@ -127,22 +128,22 @@ public final class ConfigurableDoubleParserTestDataFactory {
         );
         DecimalFormat fmt = new DecimalFormat("#00.0####E0", dfs);
         for (double n : new double[]{3e-9, -7e8, Double.NaN, Double.POSITIVE_INFINITY, Double.NEGATIVE_INFINITY}) {
-            list.add(new NumberTestData("ignoreCase: " + fmt.format(n), englishLocale, symbols, true, fmt.format(n), n));
-            list.add(new NumberTestData("ignoreCase: lower-case " + fmt.format(n).toLowerCase(englishLocale), englishLocale, symbols, true, fmt.format(n).toLowerCase(englishLocale), n));
-            list.add(new NumberTestData("ignoreCase: upper-case " + fmt.format(n).toUpperCase(englishLocale), englishLocale, symbols, true, fmt.format(n).toUpperCase(englishLocale), n));
+            list.add(new NumberTestData(locale + " ignoreCase: " + fmt.format(n), locale, symbols, true, fmt.format(n), n));
+            list.add(new NumberTestData(locale + " ignoreCase: lower-case " + fmt.format(n).toLowerCase(locale), locale, symbols, true, fmt.format(n).toLowerCase(locale), n));
+            list.add(new NumberTestData(locale + " ignoreCase: upper-case " + fmt.format(n).toUpperCase(locale), locale, symbols, true, fmt.format(n).toUpperCase(locale), n));
         }
-        list.add(new NumberTestData("ignoreCase: " + dfs.getNaN().toLowerCase(), englishLocale, symbols, true, dfs.getNaN().toLowerCase(), Double.NaN));
-        list.add(new NumberTestData("ignoreCase: " + dfs.getNaN().toUpperCase(), englishLocale, symbols, true, dfs.getNaN().toUpperCase(), Double.NaN));
-        list.add(new NumberTestData("ignoreCase: 12" + dfs.getExponentSeparator().toLowerCase() + "5", englishLocale, symbols, true, "12" + dfs.getExponentSeparator().toLowerCase() + "5", 12e5));
-        list.add(new NumberTestData("ignoreCase: 12" + dfs.getExponentSeparator().toUpperCase() + "5", englishLocale, symbols, true, "12" + dfs.getExponentSeparator().toUpperCase() + "5", 12e5));
+        list.add(new NumberTestData(locale + " ignoreCase: " + dfs.getNaN().toLowerCase(), locale, symbols, true, dfs.getNaN().toLowerCase(), Double.NaN));
+        list.add(new NumberTestData(locale + " ignoreCase: " + dfs.getNaN().toUpperCase(), locale, symbols, true, dfs.getNaN().toUpperCase(), Double.NaN));
+        list.add(new NumberTestData(locale + " ignoreCase: 12" + dfs.getExponentSeparator().toLowerCase() + "5", locale, symbols, true, "12" + dfs.getExponentSeparator().toLowerCase() + "5", 12e5));
+        list.add(new NumberTestData(locale + " ignoreCase: 12" + dfs.getExponentSeparator().toUpperCase() + "5", locale, symbols, true, "12" + dfs.getExponentSeparator().toUpperCase() + "5", 12e5));
 
         return list;
     }
 
     public static List<NumberTestData> createSwissIgnoreCaseNumberFormatSymbolsTestData() {
         List<NumberTestData> list = new ArrayList<>();
-        Locale swissLocale = new Locale("de", "CH");
-        DecimalFormatSymbols dfs = DecimalFormatSymbols.getInstance(swissLocale);
+        Locale locale = new Locale("de", "CH");
+        DecimalFormatSymbols dfs = DecimalFormatSymbols.getInstance(locale);
         NumberFormatSymbols symbols = new NumberFormatSymbols(
                 "" + dfs.getDecimalSeparator(),
                 "" + dfs.getGroupingSeparator() + "'",
@@ -153,28 +154,113 @@ public final class ConfigurableDoubleParserTestDataFactory {
                 Collections.singleton(dfs.getNaN()),
                 "" + dfs.getZeroDigit()
         );
-        list.add(new NumberTestData("ignoreCase: 12’961’872.332", swissLocale, symbols, true, "12’961’872.332", 12961872.332));
-        list.add(new NumberTestData("ignoreCase: " + dfs.getNaN().toLowerCase(), swissLocale, symbols, true, dfs.getNaN().toLowerCase(), Double.NaN));
-        list.add(new NumberTestData("ignoreCase: " + dfs.getNaN().toUpperCase(), swissLocale, symbols, true, dfs.getNaN().toUpperCase(), Double.NaN));
-        list.add(new NumberTestData("ignoreCase: 12" + dfs.getExponentSeparator().toLowerCase() + "5", swissLocale, symbols, true, "12" + dfs.getExponentSeparator().toLowerCase() + "5", 12e5));
-        list.add(new NumberTestData("ignoreCase: 12" + dfs.getExponentSeparator().toUpperCase() + "5", swissLocale, symbols, true, "12" + dfs.getExponentSeparator().toUpperCase() + "5", 12e5));
-        list.add(new NumberTestData("case-sensitive, invalid: 12.3458’67", "12.3458’67", 0, 9, 0, 9, 10, null, SYNTAX_ERROR, NumberFormatException.class, swissLocale, symbols));
+        list.add(new NumberTestData(locale + " ignoreCase: 12’961’872.332", locale, symbols, true, "12’961’872.332", 12961872.332));
+        list.add(new NumberTestData(locale + " ignoreCase: " + dfs.getNaN().toLowerCase(), locale, symbols, true, dfs.getNaN().toLowerCase(), Double.NaN));
+        list.add(new NumberTestData(locale + " ignoreCase: " + dfs.getNaN().toUpperCase(), locale, symbols, true, dfs.getNaN().toUpperCase(), Double.NaN));
+        list.add(new NumberTestData(locale + " ignoreCase: 12" + dfs.getExponentSeparator().toLowerCase() + "5", locale, symbols, true, "12" + dfs.getExponentSeparator().toLowerCase() + "5", 12e5));
+        list.add(new NumberTestData(locale + " ignoreCase: 12" + dfs.getExponentSeparator().toUpperCase() + "5", locale, symbols, true, "12" + dfs.getExponentSeparator().toUpperCase() + "5", 12e5));
+        list.add(new NumberTestData(locale + " case-sensitive, invalid: 12.3458’67", "12.3458’67", 0, 9, 0, 9, 10, null, SYNTAX_ERROR, NumberFormatException.class, locale, symbols));
         return list;
     }
 
     public static List<NumberTestData> createArabianNumberFormatSymbolsTestData() {
         List<NumberTestData> list = new ArrayList<>();
-        Locale arabianLocale = new Locale("ar");
+        Locale locale = new Locale("ar");
         DecimalFormatSymbols dfs = DecimalFormatSymbols.getInstance(
-                arabianLocale
+                locale
         );
         NumberFormatSymbols symbols = NumberFormatSymbols.fromDecimalFormatSymbols(dfs);
         DecimalFormat fmt = new DecimalFormat("#00.0####E0", dfs);
         for (double n : new double[]{3e-9, -7e8, Double.NaN, Double.POSITIVE_INFINITY, Double.NEGATIVE_INFINITY}) {
-            list.add(new NumberTestData(fmt.format(n), arabianLocale, symbols, fmt.format(n), n));
+            list.add(new NumberTestData(locale + " " + fmt.format(n), locale, symbols, fmt.format(n), n));
         }
+        list.add(new NumberTestData(locale + " U+061C followed by - sign", locale, symbols, true, "\u061C-١٢٣٬٤٥٦٫٧٨٩", -123_456.789));
+        list.add(new NumberTestData(locale + " U+061C not followed by - sign", locale, symbols, true, "\u061C١٢٣٬٤٥٦٫٧٨٩", 123_456.789));
 
         return list;
+    }
+
+    public static List<NumberTestData> createCustomArabianNumberFormatSymbolsTestData() {
+        List<NumberTestData> list = new ArrayList<>();
+        Locale locale = new Locale("ar");
+        DecimalFormatSymbols dfs = DecimalFormatSymbols.getInstance(
+                locale
+        );
+        NumberFormatSymbols symbols = NumberFormatSymbols.fromDecimalFormatSymbols(dfs);
+        symbols.withMinusSign(new LinkedHashSet<>(Arrays.asList('-', '\u061C')));
+
+        DecimalFormat fmt = new DecimalFormat("#00.0####E0", dfs);
+        for (double n : new double[]{3e-9, -7e8, Double.NaN, Double.POSITIVE_INFINITY, Double.NEGATIVE_INFINITY}) {
+            list.add(new NumberTestData(locale + " " + fmt.format(n), locale, symbols, fmt.format(n), n));
+        }
+        list.add(new NumberTestData(locale + " customized locale, U+061C followed by - sign", locale, symbols, true, "\u061C-١٢٣٬٤٥٦٫٧٨٩", -123_456.789));
+        // list.add(new NumberTestData(locale+" customized locale, U+061C not followed by - sign", locale, symbols, true, "\u061C١٢٣٬٤٥٦٫٧٨٩", -123_456.789));
+
+        return list;
+    }
+
+    public static List<NumberTestData> createDataForLegalConfiguredStrings() {
+        return Arrays.asList(
+                new NumberTestData("NaN+", Double.NaN),
+                new NumberTestData("Infinity+", Double.POSITIVE_INFINITY),
+                new NumberTestData("NaN-", Double.NaN),
+                new NumberTestData("Infinity-", Double.NEGATIVE_INFINITY),
+                new NumberTestData("1+", 1),
+                new NumberTestData("1.2+", 1.2),
+                new NumberTestData("1.2+e3", 1.2e3),
+                new NumberTestData("1.2+E3", 1.2e3),
+                new NumberTestData("1.2+e3", 1.2e3),
+                new NumberTestData("1-", -1),
+                new NumberTestData("1.2-", -1.2),
+                new NumberTestData("1.2-e3", -1.2e3),
+                new NumberTestData("1.2-E3", -1.2e3),
+                new NumberTestData("1.2-e3", -1.2e3),
+                new NumberTestData("1.2e-3", 1.2e-3),
+                new NumberTestData("1.2E-3", 1.2e-3),
+                new NumberTestData("1.2e-3", 1.2e-3),
+                new NumberTestData("1.2e3-", 1.2e-3),
+                new NumberTestData("1.2E3-", 1.2e-3),
+                new NumberTestData("1.2e+3", 1.2e3),
+                new NumberTestData("1.2e+3", 1.2e3),
+                new NumberTestData("1.2E+3", 1.2e3),
+                new NumberTestData("1.2e3+", 1.2e3),
+                new NumberTestData("1.2e3+", 1.2e3),
+                new NumberTestData("1.2E3+", 1.2e3)
+        );
+    }
+
+    public static List<NumberTestData> createDataForBadConfiguredStrings() {
+        return Arrays.asList(
+                new NumberTestData("+NaN+"),
+                new NumberTestData("-NaN-"),
+                new NumberTestData("+NaN-"),
+                new NumberTestData("-NaN+"),
+                new NumberTestData("+Infinity+"),
+                new NumberTestData("+Infinity-"),
+                new NumberTestData("-Infinity+"),
+                new NumberTestData("-Infinity-"),
+                new NumberTestData("+1+"),
+                new NumberTestData("-1.2+"),
+                new NumberTestData("+1.2+e3"),
+                new NumberTestData("-1.2+E3"),
+                new NumberTestData("+1.2+e3"),
+                new NumberTestData("-1-"),
+                new NumberTestData("-1.2-"),
+                new NumberTestData("-1.2-e3"),
+                new NumberTestData("-1.2-E3"),
+                new NumberTestData("-1.2-e3"),
+                new NumberTestData("-1.2-e3"),
+                new NumberTestData("-1.2-E-3"),
+                new NumberTestData("-1.2e-3-"),
+                new NumberTestData("1.2e-3-"),
+                new NumberTestData("1.2E-3-"),
+                new NumberTestData("1.2e+3+"),
+                new NumberTestData("1.2e+3+"),
+                new NumberTestData("1.2E+3+"),
+                new NumberTestData("1.2e+3+"),
+                new NumberTestData("1.2e+3+"),
+                new NumberTestData("1.2E+3+")
+        );
     }
 
     public static List<NumberTestData> createLocalizedTestData(Locale locale, List<NumberTestData> inputList) {
